added mike to copyright footer

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
         <li>Branding</li>
     </ul>
 </aside>
-<footer>Copyright &copy; Trademark &trade; Dana Brown Ritter 2018. All rights reserved.</footer>
+<footer>Copyright &copy; Trademark &trade; Mike and Dana Brown Ritter 2018. All rights reserved.</footer>
 </body>
 </html>
