added first paragraph to index page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
 <header><h1>Brown Ritter Media Consulting</h1></header>
 <main>
+    <h1>Does Your Organization Need a Professional Consultant?</h1>
+    <p>From Main Street to Wall Street and Walla Walla, Washington to Washington, D.C., organizations of all sizes rely on professional consultants to advise them on how to most effectively achieve their goals. Some organizations just need help launching a new idea, others rely on consultants to get and keep them on track. Professional consultants study the trends and techniques that set successful organizations apart and build the network of professional connections necessary to open doors for their clients and advise them on opportunities and pitfalls ahead of time.</p>
+    <p>A media consultant has a background in communications that spans different forms of media and the experience to translate that to practical advice for their client. This includes understanding different audiences, applying a variety of strategies, and identifying resources and opportunities for achieving their client's goals. Their talent provides valuable time- and money-saving know-how to their client.</p>
+    <p>Brown Ritter Consulting brings the strengths of professional media consultants to our clients with the focus and affordability of a small agency. Our clients aren't passed off to some junior partner. We are committed to building a community of satisfied clients who become our strongest advocates. Here's a brief look at our process:</p>
     <h2>Assess Your Core Strengths, Values and Goals</h2>
+    <p></p>
     <h2>Build a Brand that Attracts Followers</h2>
     <h2>Communicate Your Message More Effectively</h2>
 </main>
