added main article copy to index page

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
     <p>A media consultant has a background in communications that spans different forms of media and the experience to translate that to practical advice for their client. This includes understanding different audiences, applying a variety of strategies, and identifying resources and opportunities for achieving their client's goals. Their talent provides valuable time- and money-saving know-how to their client.</p>
     <p>Brown Ritter Consulting brings the strengths of professional media consultants to our clients with the focus and affordability of a small agency. Our clients aren't passed off to some junior partner. We are committed to building a community of satisfied clients who become our strongest advocates. Here's a brief look at our process:</p>
     <h2>Assess Your Core Strengths, Values and Goals</h2>
-    <p></p>
+    <p>The perspective of an outside observer is often helpful in identifying blind spots we haven't realized or are reluctant to admit. Armed with tools like strength finders, surveys, and reports, our consulting service will hone in on the qualities that set your organization apart and potential roadblocks within and outside. We will collect and distill your organization's existing business strategy and the feedback of key stakeholders into action items we can build on to take immediate action to meeting those goals.</p>
     <h2>Build a Brand that Attracts Followers</h2>
+    <p>From action-oriented goals we build a recognizable brand that distinguishes your organization from the competition. This might include a memorable tag line or slogan, but effective branding goes beyond marketing gimmicks. Your existing assets and some archived resources may bring about the kind of response that achieves your goals, or you may require a bottom-up strategy that redefines your organization according to what you really want to achieve.</p>
     <h2>Communicate Your Message More Effectively</h2>
+    <p>We build on the information gathered and lessons learned from previous campaigns to zero in on the message that connects with your core brand and target audience. The campaigns that flop often miss out on one of these key components. It is the experienced strategic thinking and purpose-driven messaging that distinguish an effective campaign that ultimately becomes the identity of your organization internally and among your audience.</p>
 </main>
 <aside>
     <ul>
