added sidebar copy to index page

--- a/index.html
+++ b/index.html
@@ -22,13 +22,21 @@
     <p>We build on the information gathered and lessons learned from previous campaigns to zero in on the message that connects with your core brand and target audience. The campaigns that flop often miss out on one of these key components. It is the experienced strategic thinking and purpose-driven messaging that distinguish an effective campaign that ultimately becomes the identity of your organization internally and among your audience.</p>
 </main>
 <aside>
-    <ul>
-        <li>Social Media</li>
-        <li>Website</li>
-        <li>Talent Acquisition</li>
-        <li>Communication</li>
-        <li>Branding</li>
-    </ul>
+    <article>
+        <h1>Improve your organization's performance in a number of strategic initiatives</h1>
+        <dl>
+            <dt>Social Media</dt>
+            <dd>Improve engagements and realize increased traffic on Facebook pages, Twitter, Instagram, and more.</dd>
+            <dt>Website</dt>
+            <dd>Increase visibility in search engines without pricey gimmicks with meaningful, well-structured content the search engines and your audience will love.</dd>
+            <dt>Talent Acquisition</dt>
+            <dd>Attract the candidates you really <em>want</em> in your organization through trusted professional networks and eye-catching job postings</dd>
+            <dt>Communication</dt>
+            <dd>Improve your engagements with your audience and within your organization by connecting your message with your values and eliminating tired, cliche, and off-putting language</dd>
+            <dt>Branding</dt>
+            <dd>Pull it all together to create a comprehensive strategy to saturate your market or just clarify the core values and purpose for your key audience</dd>
+        </dl>
+    </article>
 </aside>
 <footer>Copyright &copy; Trademark &trade; Mike and Dana Brown Ritter 2018. All rights reserved.</footer>
 </body>
